# AI4Math-Computational-Mathematics

./: .agent.md  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  GEMINI.md  LICENSE  README.md  README.zh-CN.md  README_EN.md  SKILL.md  matrix-computation.md  matrix-computation_EN.md  pyproject.toml  test_all_examples.py  test_all_skills.py  test_kronecker_skill.py  test_skills_via_natural_language.py
.claude/: settings.json
.claude-plugin/: plugin.json
skills/scientific-computing-reproduction/: .agent.md  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
skills/scientific-computing-reproduction/.codex/: INSTALL.md
skills/scientific-computing-reproduction/.codex-plugin/: plugin.json
skills/scientific-computing-reproduction/.cursor-plugin/: plugin.json
skills/scientific-computing-reproduction/.opencode/: INSTALL.md
skills/scientific-computing-reproduction/docs/: environment.md  interaction_protocol.md  testing.md
skills/scientific-computing-reproduction/example/admm_bhushan23_20260511/: algorithm_detection.json  plan.md
skills/scientific-computing-reproduction/example/boyd_admm_lasso_20260513/: RUN_SUMMARY.md  plan.md  repair_plan.md
skills/scientific-computing-reproduction/hooks/: session-start
skills/scientific-computing-reproduction/skills/: __init__.py  registry.yaml
skills/scientific-computing-reproduction/skills/algorithm_discovery_skill/: SKILL.md  __init__.py  manifest.yaml
skills/scientific-computing-reproduction/skills/auto_tuning_skill/: SKILL.md  __init__.py  manifest.yaml
(+189 files in other folders)
