[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invariant-computation-skill"
version = "0.1.0"
description = "Coding-agent-facing Skill for routing and verifying topological, geometric, and algebraic invariant computations."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

